...
        val focusPostalCode = FocusRequester()

        // Address input fields
        AddressInputField(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("addressLine1Input"),
            appearance = textFieldAppearance,
            value = uiState.addressLine1,
            label = stringResource(R.string.label_address_line_1),
            nextFocus = focusAddressLine2,
            autofillType = AutofillType.AddressStreet,
            onValueUpdated = viewModel::updateAddressLine1
        )
        AddressInputField(
            modifier = Modifier
                .fillMaxWidth()
                .focusRequester(focusAddressLine2)
                .testTag("addressLine2Input"),
            appearance = textFieldAppearance,
            value = uiState.addressLine2,
            label = stringResource(R.string.label_address_line_2),
            nextFocus = focusCity,
            onValueUpdated = viewModel::updateAddressLine2
        )
        AddressInputField(
            modifier = Modifier
                .fillMaxWidth()
                .focusRequester(focusCity)
                .testTag("cityInput"),
            appearance = textFieldAppearance,
            value = uiState.city,
            label = stringResource(R.string.label_city),
            nextFocus = focusState,
            autofillType = AutofillType.AddressLocality,
            onValueUpdated = viewModel::updateCity
        )
        AddressInputField(
            modifier = Modifier
                .fillMaxWidth()
                .focusRequester(focusState)
                .testTag("stateInput"),
            appearance = textFieldAppearance,
            value = uiState.state,
            label = stringResource(R.string.label_state),
            nextFocus = focusPostalCode,
            autofillType = AutofillType.AddressRegion,
            onValueUpdated = viewModel::updateState
        )
        AddressInputField(
            modifier = Modifier
                .fillMaxWidth()
                .focusRequester(focusPostalCode)
                .testTag("postalCodeInput"),
            appearance = textFieldAppearance,
            value = uiState.postalCode,
            label = stringResource(R.string.label_postal_code),
            autofillType = AutofillType.PostalCode,
            onValueUpdated = viewModel::updatePostalCode
        )
        // Country auto-complete dropdown selection
        CountryInputAutoComplete(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("countryInput"),
            appearance = searchAppearance,
            selectedItem = uiState.country,
            autofillType = AutofillType.AddressCountry,
            onCountrySelected = viewModel::updateCountry
        )
        // Use a LaunchedEffect to delay the callback invocation
...
}

@SdkLightDarkPreviews
@Composable
internal fun PreviewManualAddressWithDefault() {
    val address = BillingAddress(
        addressLine1 = "1 Park Avenue",
        city = "Manchester",
        state = "Greater Manchester",
        postalCode = "M11 5MW",
        country = "United Kingdom"
    )
    ManualAddress(savedAddress = address, onAddressUpdated = {})
}
