...
                text = stringResource(R.string.label_find_an_address),
                color = Theme.colors.onSurfaceVariant
            )

            // Address search input
            AddressSearchInput(
                modifier = Modifier.testTag("addressSearch"),
                onAddressSelected = { result ->
                    showManualAddress = true
                    viewModel.updateDefaultAddress(result.asEntity())
                }
            )

            // Show the "Enter Address Manually" text
            if (!showManualAddress) {
                Text(
                    modifier = Modifier
                        .fillMaxWidth()
                        .clickable { showManualAddress = !showManualAddress }
                        .testTag("showManualAddressButton"),
                    style = Theme.typography.body2.copy(textDecoration = TextDecoration.Underline),
                    text = stringResource(R.string.button_enter_address_manually),
                    color = Theme.colors.primary
                )
            }

...
                ) + fadeIn(
                    initialAlpha = 0.3f,
                    animationSpec = tween(EXPANSION_TRANSITION_DURATION)
                )
            ) {
                ManualAddress(
                    modifier = Modifier.testTag("manualAddress"),
                    savedAddress = uiState.billingAddress,
                    onAddressUpdated = { addressState ->
                        viewModel.updateManualAddress(addressState)
                    }
                )
            }

            // Save Address button
            SdkButton(
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(top = 4.dp)
                    .testTag("saveAddress"),
                text = stringResource(R.string.button_save_address),
                enabled = uiState.isDataValid
            ) {
                completion(uiState.billingAddress)
            }
        }
...
