...
        verticalArrangement = Arrangement.spacedBy(verticalSpacing),
        horizontalAlignment = Alignment.Start
    ) {
        AddressInputField(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("firstName1Input"),
            appearance = firstNameAppearance,
            value = firstName,
            label = stringResource(R.string.label_first_name),
            nextFocus = focusLastName,
            autofillType = ContentType.PersonFirstName,
            forceShowErrors = firstNameForceShowErrors,
...
        )

        AddressInputField(
            modifier = Modifier
                .fillMaxWidth()
                .focusRequester(focusLastName)
                .testTag("lastNameInput"),
            appearance = lastNameAppearance,
            value = lastName,
            label = stringResource(R.string.label_last_name),
            autofillType = ContentType.PersonLastName,
            forceShowErrors = lastNameForceShowErrors,
            a11yFocus = a11yLastNameFocus,
...
